# Nyx

./: .gitignore  .gitmodules  1.json  2.json  CMakeLists.txt  CMakePresets.json  compile_commands.json  filter_list.txt  imgui.ini  nyx_matgraph.json  scene.json  scene2.json  test.json  test_shadows.json
.nyx/: editor_state.ini  post_graph_editor_settings.ini  project.nyxproj.json
app/: main.cpp
assets/Polished_As_Cast_Iron_Metal_4K/: README.txt
assets/Raspberry_Red_Heavily_Damaged_Plastic_4K/: README.txt
assets/Rough_Sand_Cast_Aluminium_4K/: README.txt
assets/Terracotta_Rustic_Grey_Square_Tile_4K/: README.txt
docs/architecture/: editor-refactor.md
engine/animation/: AnimKeying.cpp  AnimKeying.h  AnimNLA.h  AnimationSystem.cpp  AnimationSystem.h  AnimationSystem_Keying.cpp  AnimationSystem_Keying.h  AnimationTypes.cpp  AnimationTypes.h
engine/app/: AppContext.cpp  AppContext.h  Application.cpp  Application.h  Application_Helpers.inl  Application_Run.cpp  EngineContext.cpp  EngineContext.h  EngineContext_Post.cpp  EngineContext_Render.cpp
engine/assets/: AssetID.h  AssetOps.cpp  AssetOps.h  AssetRecord.h  AssetRegistry.cpp  AssetRegistry.h  AssetType.h
engine/core/: Assert.h  Log.cpp  Log.h  Paths.cpp  Paths.h
engine/editor/: AddMenu.cpp  AddMenu.h  AssetBrowserContextMenu.cpp  AssetBrowserContextMenu.h  CameraFrameOverlay.cpp  CameraGizmosOverlay.cpp  CameraGizmosOverlay.h  DemoCube.h  DockspaceLayout.cpp  DragDropAsset.h  EditorCamera.cpp  EditorCamera.h  EditorDockLayout.h  EditorHistory.cpp  EditorHistory.h  Gizmo.h  (+44 more)
project/: NyxProject.nyxproj
(+353 files in other folders)
